Try some style in the images

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -7,3 +7,14 @@
 #greeting-container {
   margin-top: 20px;
 }
+
+.imgContainer {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30px; 
+}
+
+#imgContainer{
+    text-align:center;
+}
